changing file structure

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <nav class="nav column nav-2 justify-content-center">
    <h2 class="display-3 nav-header">Welcome to my Portfolio!</h2>
    <div class="row">
-    <div class="col col-2 "><img src="./images/profile-photo.JPG" class="img-thumbnail" alt="..."></div>
+    <div class="col col-2 "><img src="docs/assets/images/profile-photo.JPG" class="img-thumbnail" alt="..."></div>
     <p class="bio col-10 fs-6">My name is Chris Cota and I'm a  26 year old Web Developer from Boston, MA. <br> <br> I started my web development journey a couple years back after spending many years as sales consultant. 
   In the last year I have taken up numerous projects and  in Devember 2022 began a full stack web development bootcamp at the University of New Hampshire that will be completed in June 2023. <br> <br>
   Below are the projects that I have embarked upon in the last year. Some are fully deployed projects while others are done from the command line.</p>
@@ -77,7 +77,7 @@
 <div class="row align-items-md-center justify-content-sm-evenly">
 
     <div class="card" style="width: 18rem;">
-    <img src="./images/reservation-image.jpg" class="card-img-top phudi-img" alt="...">
+    <img src="docs/assets/images/reservation-image.jpg" class="card-img-top phudi-img" alt="...">
         <div class="card-body">
             <h5 class="card-title">Phudi</h5>
             <p class="card-text">This is a collaborative project with two friends. Phudi is a reservation website for local restaurants around Boston</p>
@@ -86,7 +86,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="./images/js-quiz.jpg" class="card-img-top" alt="...">
+      <img src="docs/assets/images/js-quiz.jpg" class="card-img-top" alt="...">
           <div class="card-body">
               <h5 class="card-title">JavaScript Quiz</h5>
               <p class="card-text">This JavaScript Quiz was created by me early on in the bootcamp when learning to use local storage.</p>
@@ -95,7 +95,7 @@
           </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="./images/tracker.jpg" class="card-img-top tracker-img" alt="...">
+        <img src="docs/assets/images/tracker.jpg" class="card-img-top tracker-img" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Schedule Tracker</h5>
                 <p class="card-text">This Schedule tracker was a project where you can plan out your day while using colored sections to see what is ahead in the day and what has passed.</p>
@@ -122,7 +122,7 @@
 <div class="row align-items-md-center justify-content-sm-evenly">
 
  <div class="card" style="width: 18rem;">
- <img src="./images/directory.jpg" class="card-img-top" alt="...">
+ <img src="docs/assets/images/directory.jpg" class="card-img-top" alt="...">
      <div class="card-body">
          <h5 class="card-title">Company Directory</h5>
          <p class="card-text">This command line project views and ammends a companies directory allowing you to add positions, salaries, and people</p>
@@ -130,7 +130,7 @@
      </div>
  </div>
  <div class="card" style="width: 18rem;">
-   <img src="./images/generator.jpg" class="card-img-top" alt="...">
+   <img src="docs/assets/images/generator.jpg" class="card-img-top" alt="...">
        <div class="card-body">
            <h5 class="card-title">ReadMe Generator</h5>
            <p class="card-text">The Command line generator prompts you through the command line and creates a professional markdown document for you</p>
@@ -158,7 +158,7 @@
 <div class="row align-items-md-center justify-content-sm-evenly">
 
  <div class="card" style="width: 18rem;">
- <img src="./images/social-network.jpg" class="card-img-top" alt="...">
+ <img src="docs/assets/images/social-network.jpg" class="card-img-top" alt="...">
      <div class="card-body">
          <h5 class="card-title">Social Network API</h5>
          <p class="card-text">This project is backend code for a social network API</p>
@@ -166,7 +166,7 @@
      </div>
  </div>
  <div class="card" style="width: 18rem;">
-   <img src="./images/weather.jpg" class="card-img-top" alt="...">
+   <img src="docs/assets/images/weather.jpg" class="card-img-top" alt="...">
        <div class="card-body">
            <h5 class="card-title">5 Day Weather Forecast</h5>
            <p class="card-text">This is a weather forecasting app. Type in the name of the city and it will give you the weather and the temp but the temp is incorrect</p>
