--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
               <a class="nav-link active" aria-current="page" href="#"><i class="iconoir-home-alt"></i> Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"> <i class="iconoir-google-docs"></i> Resume</a>
+              <a class="nav-link" download="/docs/assets/images/chris-cota-resume.pdf"> <i class="iconoir-google-docs"></i> Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="iconoir-github"></i> Github</a>
+              <a class="nav-link" rel="noopener noreferrer" href="https://github.com/ChrisJCota"><i class="iconoir-github"></i> Github</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="iconoir-linkedin"></i> LinkedIn</a>
+              <a class="nav-link" rel="noopener noreferrer" href="https://www.linkedin.com/in/christopherjcota/"><i class="iconoir-linkedin"></i> LinkedIn</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" target="_blank" rel="noopener noreferrer" href="mailto:chrisjocota@gmail.com?subject=Mail From Portfolio"><i class="iconoir-send-mail"></i> Email</a>
