--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link active" aria-current="page" href="#"><i class="iconoir-home-alt"></i> Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" download="/docs/assets/images/chris-cota-resume.pdf"> <i class="iconoir-google-docs"></i> Resume</a>
+              <a class="nav-link" href="/docs/assets/images/chris-cota-resume.pdf" download> <i class="iconoir-google-docs"></i> Resume</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" rel="noopener noreferrer" href="https://github.com/ChrisJCota"><i class="iconoir-github"></i> Github</a>
