--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
               <a class="nav-link" href="/docs/assets/images/chris-cota-resume.pdf" download> <i class="iconoir-google-docs"></i> Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" rel="noopener noreferrer" href="https://github.com/ChrisJCota"><i class="iconoir-github"></i> Github</a>
+              <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://github.com/ChrisJCota"><i class="iconoir-github"></i> Github</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" rel="noopener noreferrer" href="https://www.linkedin.com/in/christopherjcota/"><i class="iconoir-linkedin"></i> LinkedIn</a>
+              <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/christopherjcota/"><i class="iconoir-linkedin"></i> LinkedIn</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" target="_blank" rel="noopener noreferrer" href="mailto:chrisjocota@gmail.com?subject=Mail From Portfolio"><i class="iconoir-send-mail"></i> Email</a>
